--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,16 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.10"
 requests = "^2.28.1"
+cachetools = "^5.2.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.12.0"
 
 [tool.poetry.scripts]
 "solve" = "scripts:solve"
+
+[tool.black]
+target-version = ["py310"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
