--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "MIT"
 python = "^3.10"
 requests = "^2.28.1"
 cachetools = "^5.2.0"
+numpy = "^1.23.5"
 
 [tool.poetry.dev-dependencies]
 black = "^22.12.0"
