--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 requests = "^2.28.1"
 cachetools = "^5.2.0"
 numpy = "^1.23.5"
+sympy = "^1.11.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.12.0"
